@@ -59,6 +59,12 @@
 #define APR_HAS_LDAP_SSL 1
 #define APR_HAS_LDAP_URL_PARSE      0
 
+#if APR_HAS_OPENLDAP_LDAPSDK && !defined(LDAP_DEPRECATED) 
+/* Ensure that the "deprecated" interfaces are still exposed
+ * with OpenLDAP >= 2.3; these were exposed by default in earlier
+ * releases. */
+#define LDAP_DEPRECATED 1
+#endif
 
 /*
  * Include the standard LDAP header files.
